fix: resolve ESLint errors and warnings - Use next/image instead of img tag for better performance - Escape special characters in JSX text - Add media library, notifications, progress tracking features - Add email settings and templates management - Add help center and handbook features

--- a/firebase/.firebaserc
+++ b/firebase/.firebaserc
@@ -5,10 +5,22 @@
   "targets": {
     "tdcstudent-31d45": {
       "hosting": {
-        "auth": ["tdc-auth"],
-        "admin": ["tdc-admin"],
-        "student": ["tdc-student"]
+        "auth": [
+          "tdc-auth"
+        ],
+        "admin": [
+          "tdc-admin-2854e"
+        ],
+        "student": [
+          "tdc-student"
+        ]
+      },
+      "storage": {
+        "default": [
+          "tdcstudent-31d45.appspot.com"
+        ]
       }
     }
-  }
+  },
+  "etags": {}
 }
