--- a/.env.example
+++ b/.env.example
@@ -15,17 +15,24 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
 # -----------------------------------------
 # Firebase Configuration (OPTIONAL)
 # -----------------------------------------
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project-id.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123456789
 NEXT_PUBLIC_FIREBASE_APP_ID=1:123456789:web:abc123
-NEXT_PUBLIC_FIREBASE_DATABASE_URL=https://your-project-id-default-rtdb.firebasedatabase.app
+# NEXT_PUBLIC_FIREBASE_DATABASE_URL=https://your-project-id-default-rtdb.firebasedatabase.app
 
 # -----------------------------------------
-# App URLs (OPTIONAL - defaults shown)
+# App URLs (Production)
 # -----------------------------------------
-NEXT_PUBLIC_AUTH_URL=http://localhost:3000
-NEXT_PUBLIC_ADMIN_URL=http://localhost:3001
-NEXT_PUBLIC_STUDENT_URL=http://localhost:3002
+NEXT_PUBLIC_AUTH_URL=https://tdc-auth.web.app
+NEXT_PUBLIC_ADMIN_URL=https://tdc-admin-2854e.web.app
+NEXT_PUBLIC_STUDENT_URL=https://tdc-student.web.app
+
+# -----------------------------------------
+# App URLs (Development - defaults)
+# -----------------------------------------
+# NEXT_PUBLIC_AUTH_URL=http://localhost:3000
+# NEXT_PUBLIC_ADMIN_URL=http://localhost:3001
+# NEXT_PUBLIC_STUDENT_URL=http://localhost:3002
 
 # -----------------------------------------
 # Development Only
