Complete production readiness verification - Task 9
- Run full validation suite (lint, typecheck, tests, env, security)
- Test deployment dry-run with deploy.sh script
- Verify build outputs for all 3 apps
- All 794 tests pass
- Security validation: no issues found
- Bundle sizes acceptable (~84KB shared First Load JS)

--- a/.env.example
+++ b/.env.example
@@ -6,29 +6,57 @@
 
 # -----------------------------------------
 # Firebase Configuration (REQUIRED)
-# Get these from Firebase Console > Project Settings
+# Get these from Firebase Console > Project Settings > General > Your apps
 # -----------------------------------------
 NEXT_PUBLIC_FIREBASE_API_KEY=your-api-key-here
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
 
 # -----------------------------------------
+# Firebase Storage Bucket (REQUIRED)
+# -----------------------------------------
+# The storage bucket can use EITHER of these formats:
+#   - Legacy format: project-id.appspot.com
+#   - New format: project-id.firebasestorage.app
+#
+# Both formats are valid and will be accepted by the validation script.
+# Check your Firebase Console > Storage to see which format your project uses.
+#
+# Examples:
+#   NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=my-project.appspot.com
+#   NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=my-project.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project-id.firebasestorage.app
+
+# -----------------------------------------
 # Firebase Configuration (OPTIONAL)
 # -----------------------------------------
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project-id.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123456789
 NEXT_PUBLIC_FIREBASE_APP_ID=1:123456789:web:abc123
 # NEXT_PUBLIC_FIREBASE_DATABASE_URL=https://your-project-id-default-rtdb.firebasedatabase.app
 
 # -----------------------------------------
-# App URLs (Production)
+# App URLs - Production
 # -----------------------------------------
-NEXT_PUBLIC_AUTH_URL=https://tdc-auth.web.app
-NEXT_PUBLIC_ADMIN_URL=https://tdc-admin-2854e.web.app
-NEXT_PUBLIC_STUDENT_URL=https://tdc-student.web.app
+# For production deployment, use HTTPS URLs.
+# These should match your Firebase Hosting domains or custom domains.
+#
+# Firebase Hosting default domains:
+#   NEXT_PUBLIC_AUTH_URL=https://your-project-auth.web.app
+#   NEXT_PUBLIC_ADMIN_URL=https://your-project-admin.web.app
+#   NEXT_PUBLIC_STUDENT_URL=https://your-project-student.web.app
+#
+# Custom domains (if configured):
+#   NEXT_PUBLIC_AUTH_URL=https://auth.yourdomain.com
+#   NEXT_PUBLIC_ADMIN_URL=https://admin.yourdomain.com
+#   NEXT_PUBLIC_STUDENT_URL=https://student.yourdomain.com
+#
+# Production examples for The Design Council:
+NEXT_PUBLIC_AUTH_URL=https://auth.thedesigncouncil.vn
+NEXT_PUBLIC_ADMIN_URL=https://admin.thedesigncouncil.vn
+NEXT_PUBLIC_STUDENT_URL=https://student.thedesigncouncil.vn
 
 # -----------------------------------------
-# App URLs (Development - defaults)
+# App URLs - Development (uncomment for local development)
 # -----------------------------------------
 # NEXT_PUBLIC_AUTH_URL=http://localhost:3000
 # NEXT_PUBLIC_ADMIN_URL=http://localhost:3001
@@ -37,4 +65,5 @@ NEXT_PUBLIC_STUDENT_URL=https://tdc-student.web.app
 # -----------------------------------------
 # Development Only
 # -----------------------------------------
+# Enable Firebase Emulator for local development
 # NEXT_PUBLIC_USE_EMULATOR=true
