--- a/packages/firebase/package.json
+++ b/packages/firebase/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@tdc/config": "workspace:*",
+    "@tanstack/react-query": "^5.0.0",
     "@types/react": "^18.2.0",
     "react": "^18.2.0",
     "rimraf": "^5.0.5",
@@ -33,6 +34,7 @@
     "typescript": "^5.3.0"
   },
   "peerDependencies": {
+    "@tanstack/react-query": "^5.0.0",
     "react": "^18.0.0"
   }
 }
